--- a/app/templates/client_menu.html
+++ b/app/templates/client_menu.html
@@ -82,6 +82,27 @@
                                         readonly>{{item.meals_description}}</textarea>
                                 </div>
                             </div>
+                            <div class="mb-3">
+                                <div class="input-group">
+                                    <span class="input-group-text">優惠</span>
+                                    <div class="form-control">
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" id="meals_discount{{item.meals_number}}" name="meals_discount{{item.meals_number}}" value="1" {% if item.meals_discount == "1" %} checked disabled {% endif %}disabled>
+                                            <label class="form-check-label" for="meals_discount{{item.meals_number}}">啟用</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" id="meals_discount{{item.meals_number}}" name="meals_discount{{item.meals_number}}" value="0" {% if item.meals_discount == "0" %} checked disabled {% endif %} disabled>
+                                            <label class="form-check-label" for="meals_discount{{item.meals_number}}">關閉</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mb-3 input-group">
+                                <input type="text" class="form-control discount-input" id="meals_discount_values{{item.meals_number}}" name="meals_discount_values{{item.meals_number}}" value="{{item.meals_discount_values}}"
+                                {% if item.meals_discount == "1" %} {% else %} style="display: none;" {% endif %} disabled>
+                                <span class="input-group-text"
+                                {% if item.meals_discount == "1" %} {% else %} style="display: none;" {% endif %}>%</span>
+                            </div>
                             <div class="row mb-3">
                                 <div class=" col justify-content-center d-flex">
                                     <a href="#"
@@ -91,7 +112,10 @@
                                         data-meals-name="{{item.meals_name}}" data-meals-price="{{item.meals_price}}"
                                         data-meals-status="{{item.meals_status}}" data-meals-category="{{item.meals_category}}"
                                         data-meals-description="{{item.meals_description}}"
-                                        data-meals-image="{%static 'media/menu/'%}{{item.meals_owner}}/{{item.meals_image}}">
+                                        data-meals-image="{%static 'media/menu/'%}{{item.meals_owner}}/{{item.meals_image}}"
+                                        data-meals-discount="{{item.meals_discount}}"
+                                        data-meals-discount-values="{{item.meals_discount_values}}">
+
                                         <img style="width:16px " src="{% static 'modify_icon.png' %}" title="修改">修改
                                     </a>
                                 </div>
@@ -205,9 +229,32 @@
                             name="meals_description"></textarea>
                         <label for="floatingTextarea">餐點描述</label>
                     </div>
-                    <div class="modal-footer mt-5">
-                        <button type="submit" class="btn btn-success" data-bs-dismiss="modal">儲存</button>
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">取消</button>
+                    <div class="mb-3">
+                        <div class="input-group">
+                            <span class="input-group-text">優惠</span>
+                            <div class="form-control">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="discountEnable"
+                                            name="meals_discount" value="1">
+                                    <label class="form-check-label" for="discountEnable">啟用</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="discountDisable"
+                                            name="meals_discount" value="0" checked >
+                                    <label class="form-check-label" for="discountDisable">關閉</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-3" id="discountInputContainer" style="display: none;">
+                            <div class="input-group">
+                                <input type="text" class="form-control" name="meals_discount_values">
+                                <span class="input-group-text">%</span>
+                            </div>
+                        </div>
+                        <div class="modal-footer mt-5">
+                            <button type="submit" class="btn btn-success" data-bs-dismiss="modal">儲存</button>
+                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">取消</button>
+                        </div>
                     </div>
                 </form>
             </div>
@@ -281,6 +328,29 @@
                         <textarea class="form-control" placeholder="" id="floatingTextarea"
                             name="meals_description"></textarea>
                         <label for="floatingTextarea">餐點描述</label>
+                    </div>
+                    <div class="mb-3">
+                        <div class="input-group">
+                            <span class="input-group-text">優惠</span>
+                            <div class="form-control">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="Update_discountEnable"
+                                            name="meals_discount" value="1">
+                                    <label class="form-check-label" for="Update_discountEnable">啟用</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="Update_discountDisable"
+                                            name="meals_discount" value="0" >
+                                    <label class="form-check-label" for="Update_discountDisable">關閉</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-3" id="Update_discountInputContainer">
+                            <div class="input-group">
+                                <input type="text" class="form-control" name="meals_discount_values" value="">
+                                <span class="input-group-text">%</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="modal-footer mt-5">
                         <button type="submit" class="btn btn-success" data-bs-dismiss="modal">修改</button>
@@ -450,6 +520,8 @@
                 const mealsCategory = event.currentTarget.getAttribute('data-meals-category');
                 const mealsDescription = event.currentTarget.getAttribute('data-meals-description');
                 const mealsNumber = event.currentTarget.getAttribute('data-meals-number');
+                const mealsDiscount = event.currentTarget.getAttribute('data-meals-discount');
+                const mealsDiscountValues = event.currentTarget.getAttribute('data-meals-discount-values');
                 const mealsImage = event.currentTarget.getAttribute('data-meals-image');  // 新增获取图像的属性
 
                 // 将获取到的值设置到表单字段中
@@ -467,6 +539,12 @@
 
                 // 设置隐藏域
                 form.querySelector('input[name="meals_number"]').value = mealsNumber;
+
+                //設定折扣按鈕
+                form.querySelector(`input[name="meals_discount"][value="${mealsDiscount}"]`).checked = true;
+
+                //設定折扣值
+                form.querySelector('input[name="meals_discount_values"]').value = mealsDiscountValues;
 
                 // 设置图像
                 const imgElement = form.querySelector('#update_previewImage');
@@ -501,6 +579,49 @@
         });
     });
 </script>
+
+<!-- 新增欄位中折扣輸入的監聽 -->
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const discountEnableRadio = document.getElementById('discountEnable');
+        const discountDisableRadio = document.getElementById('discountDisable');
+        const discountInputContainer = document.getElementById('discountInputContainer');
+
+        discountEnableRadio.addEventListener('change', function () {
+            if (discountEnableRadio.checked) {
+                discountInputContainer.style.display = 'block';
+            }
+        });
+
+        discountDisableRadio.addEventListener('change', function () {
+            if (discountDisableRadio.checked) {
+                discountInputContainer.style.display = 'none';
+            }
+        });
+    });
+</script>
+
+<!-- 修改欄位中折扣輸入的監聽 -->
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+    const Up_discountEnableRadio = document.getElementById('Update_discountEnable');
+    const Up_discountInputContainer = document.getElementById('Update_discountInputContainer');
+
+    Up_discountEnableRadio.addEventListener('change', function () {
+        if (Up_discountEnableRadio.checked) {
+            Up_discountInputContainer.style.display = 'block';
+        }
+    });
+
+    const Up_discountDisableRadio = document.getElementById('Update_discountDisable');
+    Up_discountDisableRadio.addEventListener('change', function () {
+        if (Up_discountDisableRadio.checked) {
+            Up_discountInputContainer.style.display = 'none';
+        }
+    });
+});
+</script>
+
 
 
 
