--- a/app/templates/client_menu.html
+++ b/app/templates/client_menu.html
@@ -98,10 +98,12 @@
                                 </div>
                             </div>
                             <div class="mb-3 input-group">
+                                <span class="input-group-text"
+                                {% if item.meals_discount == "1" %} {% else %} style="display: none;" {% endif %}>折扣</span>
                                 <input type="text" class="form-control discount-input" id="meals_discount_values{{item.meals_number}}" name="meals_discount_values{{item.meals_number}}" value="{{item.meals_discount_values}}"
                                 {% if item.meals_discount == "1" %} {% else %} style="display: none;" {% endif %} disabled>
                                 <span class="input-group-text"
-                                {% if item.meals_discount == "1" %} {% else %} style="display: none;" {% endif %}>%</span>
+                                {% if item.meals_discount == "1" %} {% else %} style="display: none;" {% endif %}>% off</span>
                             </div>
                             <div class="row mb-3">
                                 <div class=" col justify-content-center d-flex">
@@ -248,7 +250,7 @@
                         <div class="mt-3" id="discountInputContainer" style="display: none;">
                             <div class="input-group">
                                 <input type="text" class="form-control" name="meals_discount_values">
-                                <span class="input-group-text">%</span>
+                                <span class="input-group-text">% off</span>
                             </div>
                         </div>
                         <div class="modal-footer mt-5">
@@ -348,7 +350,7 @@
                         <div class="mt-3" id="Update_discountInputContainer">
                             <div class="input-group">
                                 <input type="text" class="form-control" name="meals_discount_values" value="">
-                                <span class="input-group-text">%</span>
+                                <span class="input-group-text">% off</span>
                             </div>
                         </div>
                     </div>
