--- a/app/templates/customer_index.html
+++ b/app/templates/customer_index.html
@@ -1,30 +1,30 @@
 {% extends "customer_base.html" %}
 {% load static %}
 {% block content %}
-<div class="row">
+<!-- 菜單類別 -->
+<div class="container-fluid row">
     <div class="col-md-2">
-        <div class="col-md-12 position-sticky shadow-lg p-3 mb-5 bg-body rounded" style="top: 250px;">
-            <ul class="list-group">
-                <!-- for -->
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <div class="d-flex align-items-center">
-                        <input class="form-check-input me-2" type="checkbox" value="">
-                        A apple
-                    </div>
-                    <span class="badge bg-primary rounded-pill">15</span>
-                </li>
-
-                <!-- endfor -->
-            </ul>
-            <div class="d-flex align-items-center justify-content-center mt-3">
-                <div class="row">
-                    <a class="btn btn-dark col" href="/">
-                        <img class="col" style="width: 48px;" src="/static/search_icon.png" title="搜尋">搜尋
-                    </a>
-                </div>
+        <div class="col-md-12 position-sticky shadow-lg p-3 mb-5 bg-body rounded" style="top: 60px;">
+            <div class="list-group">
+                <a class="list-group-item list-group-item-action text-dark d-flex justify-content-between align-items-start"
+                    href="/clt/menu/">
+                    全部餐點
+                </a>
+                {% for list in count_list %}
+                <a class="list-group-item list-group-item-action text-dark d-flex justify-content-between align-items-start"
+                    id="category_number{{list.meals_category}}"
+                    name="category_number{{list.meals_category}}"
+                    value="{{list.meals_category}}"
+                    href="/clt/menu/?cn={{ list.meals_category}}">
+                    {{list.category_name}}
+                    <span class="badge bg-primary rounded-pill">{{list.total}}</span>
+                </a>
+                {% endfor %}
             </div>
         </div>
     </div>
+
+
     <div class="col-md-10">
         <div class="container-fluid ">
             <span class="fs-2 text-secondary">優惠專區</span>
@@ -190,151 +190,41 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid ">
-            <span class="fs-2 text-secondary">所有餐廳</span>
-            <hr>
-            <div class="container-fluid justify-content-center d-flex">
-                <div class="row container-fluid">
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/平凡之屋.jpg'%}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">平凡之屋</h5>
-                                <p class="card-text">平凡的吃不平凡的味道</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
-                        </div>
+        <div class="rounded shadow-lg p-3 mb-3 mt-3 bg-body">
+            <div class="mb-3 row d-flex justify-content-center">
+                <span class="fs-2 text-secondary">所有餐廳</span>
+                <hr>
+                {% for meals in total_meals%}
+                <div class="card mx-4 mt-3 mb-3" style="width: 15rem";>
+                    <div class="mt-3 mb-3 justify-content-center d-flex">
+                        <img src="{%static 'media/menu/'%}{{meals.meals_owner}}/{{meals.meals_image}}"
+                            class="card-img-top" style="height: 120px;width: 120px;">
                     </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/不夜侯.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">不夜侯</h5>
-                                <p class="card-text">不喝不知味</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
+                    <div class="card-body">
+                        <div class="input-group mt-2">
+                            <span class="input-group-text">名稱</span>
+                            <input type="text" class="form-control" id="meals_name{{meals.meals_number}}"
+                                    name="meals_name{{meals.meals_number}}" value='{{meals.meals_name}}' readonly>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/fries.jpg'%}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">詐欺犯</h5>
-                                <p class="card-text">炸妻香酥脆</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
+                        <div class="input-group mt-2">
+                            <span class="input-group-text">價格</span>
+                            <input type="text" class="form-control" id="meals_prices{{meals.meals_number}}"
+                                name="meals_prices{{meals.meals_number}}" value='{{meals.meals_price}}' readonly>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/noodle.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">鹿港麵線糊</h5>
-                                <p class="card-text">用鼻孔吸也吃得完</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
+                        <div class="input-group mt-2">
+                            <span class="input-group-text">折扣</span>
+                            <input type="text" class="form-control" id="meals_discount_values{{meals.meals_number}}"
+                                name="meals_discount_values{{meals.meals_number}}" value='{{meals.meals_discount_values}}' readonly>
+                            <span class="input-group-text">% off</span>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/seafood.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">響石天堂</h5>
-                                <p class="card-text">通風套餐</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
+                        <div class="input-group mt-2 mb-3">
+                            <span class="input-group-text">描述</span>
+                            <textarea class="form-control" name="meals_meals_description{{meals.meals_number}}" readonly>{{meals.meals_description}}</textarea>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/wosami.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">生吃活史</h5>
-                                <p class="card-text">滿滿寄生蟲的生魚片</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
-                        </div>
+                        <a href="#" class="btn btn-primary">點餐去</a>
                     </div>
                 </div>
-            </div>
-
-            <span class="container" style="height:50px;"></span>
-
-            <div class="container-fluid justify-content-center d-flex">
-                <div class="row container-fluid">
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/平凡之屋.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">平凡之屋</h5>
-                                <p class="card-text">平凡的吃不平凡的味道</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/不夜侯.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">不夜侯</h5>
-                                <p class="card-text">不喝不知味</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/fries.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">詐欺犯</h5>
-                                <p class="card-text">炸妻香酥脆</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/noodle.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">鹿港麵線糊</h5>
-                                <p class="card-text">用鼻孔吸也吃得完</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/seafood.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">響石天堂</h5>
-                                <p class="card-text">通風套餐</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="card" style="width: 13rem;">
-                            <img src="{% static 'image/wosami.jpg' %}" class="card-img-top" alt=""
-                                style="width:200px;height:200px;">
-                            <div class="card-body">
-                                <h5 class="card-title">生吃活史</h5>
-                                <p class="card-text">滿滿寄生蟲的生魚片</p>
-                                <a href="#" class="btn btn-primary">點餐去</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
