--- a/app/templates/customer_base.html
+++ b/app/templates/customer_base.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link d-flex align-items-center" href="/">
+                            <a class="nav-link d-flex align-items-center" href="/cum/map/">
                                 <img class="nav-link" style="width: 48px;" src="{% static 'restaurant_icon.png' %}"
                                     title="餐廳">餐廳
                             </a>
