--- a/app/templates/customer_map.html
+++ b/app/templates/customer_map.html
@@ -4,41 +4,49 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1N_PssFMCULrrmOijg6edxKvINwXnyp8&callback=initMap" async defer></script>
 
 <script>
-    // 在這裡可以加入自定義的 JavaScript 來初始化地圖
     function initMap() {
-        // 初始化地圖
-        var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 16
-        });
+    // 你的 JSON 樣式
+    var customStyle = [
+        {
+            "featureType": "poi.business",
+            "elementType": "labels.icon",
+            "stylers": [{"visibility": "off"}]
+        }
+    ];
 
-        // 獲取使用者當前位置
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(function(position) {
-                var userLocation = {
-                    lat: position.coords.latitude,
-                    lng: position.coords.longitude
-                };
+    // 初始化地圖
+    var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 16,
+        styles: customStyle // 將 JSON 樣式應用到地圖
+    });
 
-                // 將地圖中心設置為使用者的當前位置
-                map.setCenter(userLocation);
+    // 獲取使用者當前位置
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function (position) {
+            var userLocation = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude
+            };
 
-                // 在使用者位置添加標記
-                var marker = new google.maps.Marker({
-                    position: userLocation,
-                    map: map,
-                    title: 'Your Location'
-                });
-            },
-            function() {
+            // 將地圖中心設置為使用者的當前位置
+            map.setCenter(userLocation);
+
+            // 在使用者位置添加標記
+            var marker = new google.maps.Marker({
+                position: userLocation,
+                map: map,
+                title: 'Your Location'
+            });
+        },
+            function () {
                 // 如果獲取位置失敗，可以在這裡處理
                 console.error('無法獲取位置');
             });
-        }
-        else {
-            // 如果瀏覽器不支持地理位置 API，可以在這裡處理
-            console.error('瀏覽器不支持地理位置 API');
-        }
+    } else {
+        // 如果瀏覽器不支持地理位置 API，可以在這裡處理
+        console.error('瀏覽器不支持地理位置 API');
     }
+}
 </script>
 
 
