--- a/app/templates/customer_map.html
+++ b/app/templates/customer_map.html
@@ -5,49 +5,90 @@
 
 <script>
     function initMap() {
-    // 你的 JSON 樣式
-    var customStyle = [
-        {
-            "featureType": "poi.business",
-            "elementType": "labels.icon",
-            "stylers": [{"visibility": "off"}]
+        // 你的 JSON 樣式
+        var customStyle = [
+            {
+                "featureType": "poi.business",
+                "elementType": "labels.icon",
+                "stylers": [{"visibility": "off"}]
+            }
+        ];
+
+        // 初始化地圖
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 16,
+            styles: customStyle // 將 JSON 樣式應用到地圖
+        });
+
+        // 獲取使用者當前位置
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function (position) {
+                var userLocation = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude
+                };
+
+                // 將地圖中心設置為使用者的當前位置
+                map.setCenter(userLocation);
+
+                // 在使用者位置添加標記
+                var marker = new google.maps.Marker({
+                    position: userLocation,
+                    map: map,
+                    title: 'Your Location',
+                    visible: false // 設為不可見
+                });
+
+                // 遍歷從資料庫中檢索到的每個餐廳資訊
+                var restaurants = {{ rest_info|safe }};
+                for (var i = 0; i < restaurants.length; i++) {
+                    var restaurant = restaurants[i];
+                    var restaurantLocation = {
+                        lat: parseFloat(restaurant.lat), // 請用實際的緯度值替換
+                        lng: parseFloat(restaurant.lng)  // 請用實際的經度值替換
+                    };
+
+                    // 在每個餐廳位置添加標記
+                    var restaurantMarker = new google.maps.Marker({
+                        position: restaurantLocation,
+                        map: map,
+                        title: restaurant.rest_name ,
+                        icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png' // 藍色圖示
+                    });
+
+                    // 使用 IIFE 來建立新的作用域，保留每個標記的狀態
+                    (function (marker, restaurant) {
+                        // 為每個標記添加點擊事件，當點擊時顯示訊息窗口
+                        marker.addListener('click', function() {
+                            var contentString = '<div>'+
+                                '<h2>'+restaurant.rest_name+'</h2>'+
+                                '<p>地址: '+restaurant.rest_address+'</p>'+
+                                '<p>電話: '+restaurant.rest_phone+'</p>'+
+                                '<a class="btn btn-outline-info name="uniform_numbers" href="/cum/rest_menu/?cn='
+                                + restaurant.uniform_numbers + '">' + 'GO ~ 點餐去 !</a>' +
+                                '</div>';
+
+                            var infowindow = new google.maps.InfoWindow({
+                                content: contentString
+                            });
+
+                            infowindow.open(map, marker);
+                        });
+                    })(restaurantMarker, restaurant);
+                }
+            },
+                function () {
+                    // 如果獲取位置失敗，可以在這裡處理
+                    console.error('無法獲取位置');
+                });
         }
-    ];
-
-    // 初始化地圖
-    var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 16,
-        styles: customStyle // 將 JSON 樣式應用到地圖
-    });
-
-    // 獲取使用者當前位置
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function (position) {
-            var userLocation = {
-                lat: position.coords.latitude,
-                lng: position.coords.longitude
-            };
-
-            // 將地圖中心設置為使用者的當前位置
-            map.setCenter(userLocation);
-
-            // 在使用者位置添加標記
-            var marker = new google.maps.Marker({
-                position: userLocation,
-                map: map,
-                title: 'Your Location'
-            });
-        },
-            function () {
-                // 如果獲取位置失敗，可以在這裡處理
-                console.error('無法獲取位置');
-            });
-    } else {
-        // 如果瀏覽器不支持地理位置 API，可以在這裡處理
-        console.error('瀏覽器不支持地理位置 API');
+        else {
+            // 如果瀏覽器不支持地理位置 API，可以在這裡處理
+            console.error('瀏覽器不支持地理位置 API');
+        }
     }
-}
 </script>
+
 
 
 
