--- a/app/templates/customer_rest_orderPG.html
+++ b/app/templates/customer_rest_orderPG.html
@@ -7,8 +7,7 @@
         <div class="col-md-12 position-sticky shadow-lg p-3 mb-5 bg-body rounded" style="top: 60px;">
             <div class="list-group">
                 <a class="list-group-item list-group-item-action text-dark d-flex justify-content-between align-items-start"
-                    href="/clt/menu/">
-                    全部餐點
+                    href="/clt/menu/">全部餐點
                 </a>
                 {% for list in count_list %}
                 <a class="list-group-item list-group-item-action text-dark d-flex justify-content-between align-items-start"
