--- a/app/templates/customer_meal.html
+++ b/app/templates/customer_meal.html
@@ -15,7 +15,7 @@
                     id="category_number{{list.meals_category}}"
                     name="category_number{{list.meals_category}}"
                     value="{{list.meals_category}}"
-                    href="/clt/menu/?cn={{ list.meals_category}}">
+                    href="/?cn={{list.meals_category}}">
                     {{list.category_name}}
                     <span class="badge bg-primary rounded-pill">{{list.total}}</span>
                 </a>
@@ -195,7 +195,7 @@
                 <span class="fs-2 text-secondary">所有餐廳</span>
                 <hr>
                 {% for meals in total_meals%}
-                <div class="card mx-4 mt-3 mb-3" style="width: 15rem";>
+                <div class="card mx-2 mt-3 mb-2" style="width: 15rem";>
                     <div class="mt-3 mb-3 justify-content-center d-flex">
                         <img src="{%static 'media/menu/'%}{{meals.meals_owner}}/{{meals.meals_image}}"
                             class="card-img-top" style="height: 120px;width: 120px;">
