--- a/app/templates/customer_map.html
+++ b/app/templates/customer_map.html
@@ -64,7 +64,7 @@
                                 '<h2>'+restaurant.rest_name+'</h2>'+
                                 '<p>地址: '+restaurant.rest_address+'</p>'+
                                 '<p>電話: '+restaurant.rest_phone+'</p>'+
-                                '<a class="btn btn-outline-info name="uniform_numbers" href="/cum/rest_menu/?cn='
+                                '<a class="btn btn-outline-info name="uniform_numbers" href="/cum/rest_menu/?id='
                                 + restaurant.uniform_numbers + '">' + 'GO ~ 點餐去 !</a>' +
                                 '</div>';
 
