--- a/app/templates/customer_rest_orderPG.html
+++ b/app/templates/customer_rest_orderPG.html
@@ -7,14 +7,14 @@
         <div class="col-md-12 position-sticky shadow-lg p-3 mb-5 bg-body rounded" style="top: 60px;">
             <div class="list-group">
                 <a class="list-group-item list-group-item-action text-dark d-flex justify-content-between align-items-start"
-                    href="/clt/menu/">全部餐點
+                    href="/cum/rest_menu/?id={{id}}">全部餐點
                 </a>
                 {% for list in count_list %}
                 <a class="list-group-item list-group-item-action text-dark d-flex justify-content-between align-items-start"
                     id="category_number{{list.meals_category}}"
                     name="category_number{{list.meals_category}}"
                     value="{{list.meals_category}}"
-                    href="/clt/menu/?cn={{ list.meals_category}}">
+                    href="/cum/rest_menu/?id={{id}}&cn={{list.meals_category}}">
                     {{list.category_name}}
                     <span class="badge bg-primary rounded-pill">{{list.total}}</span>
                 </a>
@@ -50,11 +50,15 @@
                                 name="meals_discount_values{{meals.meals_number}}" value='{{meals.meals_discount_values}}' readonly>
                             <span class="input-group-text">% off</span>
                         </div>
-                        <div class="input-group mt-2 mb-3">
+                        <div class="input-group mt-2">
                             <span class="input-group-text">描述</span>
                             <textarea class="form-control" name="meals_meals_description{{meals.meals_number}}" readonly>{{meals.meals_description}}</textarea>
                         </div>
-                        <a href="#" class="btn btn-primary">點餐去</a>
+                        <div class="input-group mt-2 mb-3">
+                            <span class="input-group-text">數量</span>
+                            <input type="number" class="form-control" id="meals_quantity{{ meals.meals_number }}" name="meals_quantity{{ meals.meals_number }}" value="0">
+                        </div>
+                        <a href="#" class="btn btn-primary">加入購物車</a>
                     </div>
                 </div>
                 {% endfor %}
