--- a/app/templates/customer_base.html
+++ b/app/templates/customer_base.html
@@ -51,12 +51,14 @@
                                     title="會員">會員專區
                             </a>
                             <ul class="dropdown-menu">
+                                {% comment %} {% if request.cookies.get('user_id') %}
                                 <li class="dropdown-item">
                                     <a class="nav-link d-flex align-items-center" href="/cum/login/">
                                         <img class="nav-link" style="width: 48px;" src="{% static 'login_icon.png' %}"
                                             title="登入">登入
                                     </a>
                                 </li>
+                                {% endcomment %}
                                 <!-- <li class="dropdown-item">
                                     <a class="nav-link d-flex align-items-center" href="/">
                                         <img class="nav-link" style="width: 48px;" src="{% static 'signup_icon.png' %}"
@@ -69,7 +71,7 @@
                                             title="購物車">購物車
                                     </a>
                                 </li>
-                                {% comment %} {% if request.cookies.get('user_id') %}
+                                {% comment %} {% if not request.cookies.get('user_id') %}
                                 <li class="dropdown-item">
                                     <hr class="dropdown-divider">
                                 </li>
