完成客戶登入及登出介面串聯

--- a/app/templates/customer_base.html
+++ b/app/templates/customer_base.html
@@ -76,7 +76,7 @@
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li class="dropdown-item">
-                                    <a class="nav-link d-flex align-items-center" href="/">
+                                    <a class="nav-link d-flex align-items-center" href="/cum/logout/">
                                         <img class="nav-link" style="width: 48px;" src="{% static 'logout_icon.png' %}"
                                             title="登出">登出
                                     </a>
