--- a/app/templates/customer_base.html
+++ b/app/templates/customer_base.html
@@ -66,7 +66,7 @@
                                     </a>
                                 </li> -->
                                 <li class="dropdown-item">
-                                    <a class="nav-link d-flex align-items-center" href="/">
+                                    <a class="nav-link d-flex align-items-center" href="/cum/cart/">
                                         <img class="nav-link" style="width: 48px;" src="{% static 'market_icon.png' %}"
                                             title="購物車">購物車
                                     </a>
