--- a/app/templates/customer_cart.html
+++ b/app/templates/customer_cart.html
@@ -91,7 +91,7 @@
             {% endfor %}
             {% else %}
             <div>
-                <img src="{%static 'image/hungry.jpg/'%}" class="card-img-top">
+                <img src="{%static 'image/hungry.jpg'%}" class="card-img-top">
                 <p class="d-flex mt-3 justify-content-end">圖片來源：https://memes.tw/wtf/140632</p>
             </div>
             {% endif %}
